# navaltoolbox-lib

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst  python.rst  rust.rst
docs/source/tutorials/: hydrostatics.rst  index.rst  stability.rst  visualization.rst
docs/source/userguide/: coordinates.rst  index.rst  installation.rst  quickstart.rst  scripting.rst
python/: README.md  pyproject.toml  test.py
python/examples/: viz_demo.py
python/navaltoolbox/: __init__.py  navaltoolbox.pyi  plotting.py  visualization.py
python/tests/: test_bindings.py  test_loading.py  test_rhai_scripting.py  test_silhouette_integrity.py  test_stl_loading.py
rules/: div222_intact_stability.rhai  hsc_2000_monohull_intact.rhai  imo_a749_complete.rhai  imo_a749_general.rhai  is_code_2008_complete.rhai  is_code_2008_general.rhai  is_code_2008_passenger.rhai  template.rhai
rust/: Cargo.toml
rust/src/: appendage.rs  deckedge.rs  downflooding.rs  hull.rs  lib.rs  python.rs  vessel.rs
rust/src/downflooding/: mod.rs
rust/src/hydrostatics/: calculator.rs  dataclasses.rs  mod.rs  waterplane.rs
rust/src/mesh/: clipper.rs  loader.rs  mod.rs  transform.rs  waterplane.rs
rust/src/scripting/: context.rs  engine.rs
rust/src/tanks/: mod.rs  (+1 more)
rust/tests/: dtmb_validation.rs  extended_hydrostatics.rs  integration_tests.rs  tank_stability.rs  waterplane_distribution_tests.rs
(+18 files in other folders)
