[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "navaltoolbox"
description = "High-performance naval architecture library for hydrostatics, stability, and tank calculations"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Antoine ANCEAU"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/NavalToolbox/navaltoolbox-lib"

[tool.maturin]
features = ["python"]
manifest-path = "../rust/Cargo.toml"
python-source = "."
module-name = "navaltoolbox.navaltoolbox"
